--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.1.0",
+    "@angular/cdk": "~16.1.5",
     "@angular/common": "~16.1.0",
     "@angular/compiler": "~16.1.0",
     "@angular/core": "~16.1.0",
     "@angular/forms": "~16.1.0",
+    "@angular/material": "~16.1.5",
     "@angular/platform-browser": "~16.1.0",
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/router": "~16.1.0",
@@ -32,6 +34,7 @@
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "~16.1.0",
     "@angular/language-service": "~16.1.0",
+    "@angular/material": "^16.1.5",
     "@nx/cypress": "16.5.2",
     "@nx/eslint-plugin": "16.5.2",
     "@nx/jest": "16.5.2",
