--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~16.1.0",
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/router": "~16.1.0",
+    "@ngrx/component-store": "^16.1.0",
     "@nx/angular": "16.5.2",
     "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
