--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,17 +9,12 @@
     "importHelpers": true,
     "target": "es2022",
     "module": "esnext",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@env/*": [
-        "src/environments/*"
-      ],
+      "@env/*": ["src/environments/*"]
     },
     "useDefineForClassFields": false,
     "forceConsistentCasingInFileNames": true,
@@ -43,10 +38,7 @@
     }
   ],
   "compileOnSave": false,
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ],
+  "exclude": ["node_modules", "tmp"],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
