--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test",
-    "start:db": "json-server --watch db.json"
+    "test": "nx test"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +21,6 @@
     "@angular/router": "~16.1.0",
     "@ngrx/component-store": "^16.1.0",
     "@nx/angular": "16.5.2",
-    "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
